--- a/style.css
+++ b/style.css
@@ -1,35 +1,40 @@
-h1 {
-    color: #1985EA;
-    font-size: 40px;
+h1, h2, h3, h4, p, li {
     font-family: sans-serif;
+}
+
+h1, h2, h3, h4 {
+    color: #1985EA;
+}
+
+h1 {
+    font-size: 40px;
+    text-transform: capitalize;
 }
 
 h2 {
-    color: #1985EA;
     font-size: 32px;
-    font-family: sans-serif;
+    text-transform: uppercase;
 }
 
 h3 {
-    color: #1985EA;
     font-size: 28px;
-    font-family: sans-serif;
 }
 
 h4 {
-    color: #1985EA;
     font-size: 24px;
-    font-family: sans-serif;
+    text-align: center;
+}
+
+p, li {
+    line-height: 1.6;
 }
 
 p {
     font-size: 20px;
-    font-family: sans-serif;
 }
 
 li {
     font-size: 18px;
-    font-family: sans-serif;
 }
 
 /* article header p {
@@ -48,7 +53,7 @@ li {
 
 .related {
     list-style: none;
-}
+}a
 
 .related-author {
     font-size: 16px;
