--- a/style.css
+++ b/style.css
@@ -53,9 +53,41 @@ li {
 
 .related {
     list-style: none;
-}a
+}
 
 .related-author {
     font-size: 16px;
     font-weight: bold;
+}
+
+/* Misconception: this wont work */
+article p:first-child {
+    color: red;
+}
+
+article p:last-child {
+    color: #1985EA;
+}
+
+
+/* Styling Links: LVHA */
+a:link {
+    color: #1985EA;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #EA1985;
+}
+
+a:hover {
+    color: #1985EA;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+a:active {
+    background-color: #1985EA;
+    color: white;
+    font-size: initial;
 }
