--- a/style.css
+++ b/style.css
@@ -1,19 +1,70 @@
-h1, h2, h3, h4, p, li {
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
     font-family: sans-serif;
+}
+
+.main-header {
+    background-color: rgba(25, 133, 234, 0.25);
+    border: solid #1985EA;
+    border-width: 5px 0;
+    padding: 16px;
+}
+
+.main-header nav {
+    margin-top: 16px;
+    padding-left: 8px;
+}
+
+header {
+    margin-bottom: 16px;
+}
+
+
+nav {
+    font-size: 18px;
+}
+
+article {
+    padding: 8px;
 }
 
 h1, h2, h3, h4 {
     color: #1985EA;
+    margin-bottom: 8px;
+}
+
+p {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+ul, ol {
+    margin-left: 32px;
+}
+
+.img-post {
+    width: 100%;
+    height: 256px;
+}
+
+img {
+    margin: 12px 0;
+}
+
+p, li {
+    line-height: 1.6;
 }
 
 h1 {
     font-size: 40px;
-    text-transform: capitalize;
 }
 
 h2 {
     font-size: 32px;
-    text-transform: uppercase;
 }
 
 h3 {
@@ -25,31 +76,42 @@ h4 {
     text-align: center;
 }
 
-p, li {
-    line-height: 1.6;
-}
 
-p {
-    font-size: 20px;
-}
 
 li {
     font-size: 18px;
 }
+
 
 /* article header p {
     color: red;
 } */
 
 #author {
-    font-size: 16px;
     font-style: italic;
+    font-size: 16px;
 }
 
+/* Resolving Selector Conflicts */
 #copyright {
-    font-size: 12px;
     text-align: center;
+    font-size: 12px;
+    color: #888;
 }
+
+/* .copyright {
+    color: green;
+}
+
+.text {
+    color: blue;
+}
+
+footer p {
+    color: blueviolet;
+} */
+
+
 
 .related {
     list-style: none;
@@ -60,15 +122,41 @@ li {
     font-weight: bold;
 }
 
+aside {
+    background-color: rgba(25, 133, 234, 0.25);
+    border-top: 5px solid #1985EA;
+    border-bottom: 5px solid #1985EA;
+}
+
+/* .first-list-item {
+    color: red;
+} */
+
+
+li:first-child {
+    color: red;
+}
+
+li:last-child {
+    font-style: italic;
+}
+
+li:nth-child(2) {
+    color: green;
+}
+
+li:nth-child(even) {
+    background-color: #1985EA40;
+}
+
 /* Misconception: this wont work */
 article p:first-child {
     color: red;
 }
 
 article p:last-child {
-    color: #1985EA;
+    color: green;
 }
-
 
 /* Styling Links: LVHA */
 a:link {
@@ -87,7 +175,6 @@ a:hover {
 }
 
 a:active {
-    background-color: #1985EA;
     color: white;
-    font-size: initial;
+    background-color: #1985EA;
 }
