--- a/style.css
+++ b/style.css
@@ -1,28 +1,33 @@
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 
 body {
     font-family: sans-serif;
+    color: #444;
 }
 
 .main-header {
-    background-color: rgba(25, 133, 234, 0.25);
-    border: solid #1985EA;
-    border-width: 5px 0;
+    background-color: rgba(25, 133, 234, .25);
     padding: 16px;
+    /* border-top: 5px solid #1985ea;
+    border-bottom: 5px solid #1985ea; */
+    border: solid #1985ea;
+    border-width: 5px 0;
+}
+
+.main-header h2 {
+    margin: 0;
 }
 
 .main-header nav {
     margin-top: 16px;
-    padding-left: 8px;
 }
 
 header {
     margin-bottom: 16px;
 }
-
 
 nav {
     font-size: 18px;
@@ -33,38 +38,18 @@ article {
 }
 
 h1, h2, h3, h4 {
-    color: #1985EA;
-    margin-bottom: 8px;
-}
-
-p {
-    font-size: 20px;
-    margin-bottom: 8px;
-}
-
-ul, ol {
-    margin-left: 32px;
-}
-
-.img-post {
-    width: 100%;
-    height: 256px;
-}
-
-img {
-    margin: 12px 0;
-}
-
-p, li {
-    line-height: 1.6;
+    color: #1985ea;
+    margin-bottom: 12px;
 }
 
 h1 {
     font-size: 40px;
+    text-transform: capitalize;
 }
 
 h2 {
     font-size: 32px;
+    text-transform: uppercase;
 }
 
 h3 {
@@ -76,31 +61,115 @@ h4 {
     text-align: center;
 }
 
+p {
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 8px;
+}
 
+ul, ol {
+    margin-left: 32px;
+}
 
 li {
     font-size: 18px;
 }
 
+img {
+    margin: 12px 0;
+}
 
-/* article header p {
-    color: red;
+.img-post {
+    width: 100%;
+    height: 256px;
+}
+
+/* header p {
+    font-style: italic;
 } */
 
 #author {
     font-style: italic;
-    font-size: 16px;
+    font-size: 18px;
 }
 
-/* Resolving Selector Conflicts */
 #copyright {
+    font-size: 16px;
     text-align: center;
-    font-size: 12px;
-    color: #888;
+    padding: 16px;
 }
 
-/* .copyright {
-    color: green;
+/* footer p {
+    font-size: 16px;
+    text-align: center;
+} */
+
+.related-author {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.related {
+    list-style: none;
+}
+
+aside {
+    background-color: rgba(25, 133, 234, 0.25);
+    border: solid #1985ea;
+    border-width: 5px 0;
+    padding: 16px;
+}
+
+/* .first-list-item {
+    font-weight: bold;
+} */
+
+/* li:first-child {
+    font-weight: bold;
+}
+
+li:last-child {
+    font-style: italic;
+} */
+
+/* li:nth-child(even) {
+    color: red;
+} */
+
+
+/* Missconception: This won't work */
+article p:first-child {
+    color: red;
+}
+
+/* Styling Links */
+a:link {
+    color: #1985ea;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #ea1985;
+}
+
+a:hover {
+    color: #ea1985;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+a:active {
+    background-color: #1985ea;
+    font-size: initial;
+}
+
+/* Resolving Conflicts */
+/* #copyright {
+    color: #ea1985;
+}
+
+.copyright {
+    color: red;
 }
 
 .text {
@@ -108,73 +177,5 @@ li {
 }
 
 footer p {
-    color: blueviolet;
+    color: green !important;
 } */
-
-
-
-.related {
-    list-style: none;
-}
-
-.related-author {
-    font-size: 16px;
-    font-weight: bold;
-}
-
-aside {
-    background-color: rgba(25, 133, 234, 0.25);
-    border-top: 5px solid #1985EA;
-    border-bottom: 5px solid #1985EA;
-}
-
-/* .first-list-item {
-    color: red;
-} */
-
-
-li:first-child {
-    color: red;
-}
-
-li:last-child {
-    font-style: italic;
-}
-
-li:nth-child(2) {
-    color: green;
-}
-
-li:nth-child(even) {
-    background-color: #1985EA40;
-}
-
-/* Misconception: this wont work */
-article p:first-child {
-    color: red;
-}
-
-article p:last-child {
-    color: green;
-}
-
-/* Styling Links: LVHA */
-a:link {
-    color: #1985EA;
-    text-decoration: none;
-}
-
-a:visited {
-    color: #EA1985;
-}
-
-a:hover {
-    color: #1985EA;
-    font-weight: bold;
-    text-decoration: underline;
-}
-
-a:active {
-    color: white;
-    background-color: #1985EA;
-}
